fix: no image stretching

--- a/static/single.css
+++ b/static/single.css
@@ -71,6 +71,7 @@ main p > a {
     flex-shrink: 0;
     aspect-ratio: 16 / 9;
     width: 100%;
+    object-fit: contain;
 
     transition: transform 0.5s cubic-bezier(.25,.8,.25,1);
 }
